--- a/002. Development/코딩으로 학습하는 GoF의 디자인 패턴/빌더 패턴.md
+++ b/002. Development/코딩으로 학습하는 GoF의 디자인 패턴/빌더 패턴.md
@@ -85,6 +85,9 @@ public class App {
 
 - 빌더 패턴은 (복잡한) 객체를 만드는 프로세스를 독립적으로 분리할 수 있다.
 
+![빌더 패턴 조직도](https://github.com/kangbada0728/notes/blob/master/999.%20The%20Others/attachments/빌더패턴%20조직도.png)
+
+
 ![[빌더패턴 클래스 다이어그램.png]]
 
 - 빌더 패턴을 적용하면 인스턴스 제작을 step 별로 할 수 있게 되어 일관성 있게 객체를 만들 수 있다.
