update: 빌더패턴 이미지 변경

--- a/002. Development/코딩으로 학습하는 GoF의 디자인 패턴/빌더 패턴.md
+++ b/002. Development/코딩으로 학습하는 GoF의 디자인 패턴/빌더 패턴.md
@@ -102,7 +102,7 @@ public class App {
 
 ### After
 
-[빌더패턴 레이아웃](https://github.com/kangbada0728/notes/blob/master/999.%20The%20Others/attachments/빌더패턴%20레이아웃.png)
+![빌더패턴 레이아웃](https://github.com/kangbada0728/notes/blob/master/999.%20The%20Others/attachments/빌더패턴%20레이아웃.png)
 ![[빌더패턴 레이아웃.png]]
 
 - Builder 체이닝을 위해서 리턴 타입을 Builder 로 하였다.
