--- a/002. Development/코딩으로 학습하는 GoF의 디자인 패턴/빌더 패턴.md
+++ b/002. Development/코딩으로 학습하는 GoF의 디자인 패턴/빌더 패턴.md
@@ -81,7 +81,8 @@ public class App {
 
 ## 패턴 소개
 
-> [!note] 동일한 프로세스를 거쳐 다양한 구성의 인스턴스를 만드는 방법
+> [!note] 
+> 동일한 프로세스를 거쳐 다양한 구성의 인스턴스를 만드는 방법
 
 - 빌더 패턴은 (복잡한) 객체를 만드는 프로세스를 독립적으로 분리할 수 있다.
 
