--- a/002. Development/자바 IO & NIO 네트워크 프로그래밍/1장. 네트워크 기초.md
+++ b/002. Development/자바 IO & NIO 네트워크 프로그래밍/1장. 네트워크 기초.md
@@ -45,7 +45,6 @@ tags:
 # 03. OSI 7계층
 
 ![[자바 IO & NIO 네트워크 프로그래밍 - 그림 1-3.png]]
-![그림1-3 OSI 7계층](https://github.com/kangbada0728/notes/blob/master/999.%20The%20Others/attachments/자바%20IO%20%26%20NIO%20네트워크%20프로그래밍%20-%20그림%201-3.png)
 
 - 애플리케이션 계층, 프리젠테이션 계층, 세션 계층은 ==애플리케이션==에 관련되어 있다.
 - 트랜스포트 계층, 네트워크 계층, 데이터 링크 계층, 물리 계층은 ==데이터 전송==과 관련되어 있다.
@@ -102,6 +101,211 @@ tags:
 
 - 통신을 위한 충분한 자원을 보유하고 있는지의 여부를 판단한다.
 
+# 04. 인터넷 프로토콜
 
+> [!info]
+> 인터넷은 OSI 3계층인 네트워크 프로토콜에 기반을 둔 하나 이상의 네트워크 모임이다.
 
+- 각각의 네트워크는 인터넷 내의 다른 어떤 네트워크와도 교신할 수 있다.
+- 인터넷은 전세계적인 TCP/IP 네트워크며, IP 주소체계와 IP 프로토콜을 사용한다.
+
+## IP (Internet Protocol)
+
+> [!important]
+> 신뢰성이 없는 프로토콜이다.
+
+- 패킷이 상대방에게 안전하게 전송되는 것을 보장하지 않는다는 뜻이다.
+- IP 는 데이터를 효율적으로 전송하는 것에만 집중한다.
+- 신뢰성은 상위 계층인 트랜스포트 계층에서 책임지도록 한다.
+
+> [!info]
+> IP 는 호스트에 대한 주소 체계와 데이터 패킷에 대한 라우팅을 담당한다.
+
+- 패킷을 수신하는 각 라우터는 패킷의 IP 주소를 근간으로 라우팅을 결정한다.
+- IP 주소는 32비트 정보로 구성되는데, Dot(.) 을 구분자로 해서 8비트씩 네 부분으로 나뉘어진다.
+	- 이중 일부는 네트워크를, 다른 부분은 호스트를 나타낸다.
+
+![[자바 IO & NIO 네트워크 프로그래밍 - 그림 1-5.png]]
+
+- IP 주소 구조는 낭비가 심하기 때문에 하나의 네트워크를 좀더 작은 네트워크로 나누기 위해 로컬 네트워크에서만 적용되는 하위넷을 사용한다.
+
+## ICMP (Internet Control Message Protocol)
+
+> [!info]
+> IP 는 내장된 오류 처리, 보고 메커니즘이 없으며 IP 에 이런 기능을 추가한 프로토콜이 ICMP 다.
+
+- ICMP 에서 전송 역할은 IP 가 담당하고, 추가적인 오류 보고, 기타 제어 메시지 제어는 ICMP 가 담당하는 것이다.
+
+## TCP (Transmission Control Protocol)
+
+> [!important]
+> TCP 는 신뢰성 있는 프로토콜이다.
+
+- 즉, 전송할 데이터가 안전하게 전달되는 것을 보장하는 프로토콜이라는 뜻이다.
+- 데이터를 전송하거나 수신하기 전에 소켓을 통해 양쪽 연결이 성립되어야만 한다.
+- 이렇게 연결이 성립되면 TCP 는 데이터의 손실이나 중복없이 데이터를 목적지에 확실하게 전달한다.
+
+> [!important]
+> 소켓과 포트를 이용해서 동시에 여러 개의 접속을 지원한다.
+
+- 하나의 채팅 서버가 동시에 수천 명의 동시 사용자들의 연결을 유지하는 것도 TCP 가 지원하는 다중 송수신 특징 때문에 가능한 것이다.
+
+![[자바 IO & NIO 네트워크 프로그래밍 - 그림 1-6.png]]
+
+- 소켓과 포트를 이용해서 연결되면 우리가 IO 에서 스트림을 사용하는 것과 거의 동일하게 사용할 수 있는 가상 스트림이 만들어진다.
+- 따라서 소켓 프로그램은 IO 스트림과 소켓에 이미 연결된 가상 스트림을 연결해서 사용하는 것이다.
+
+## UDP (User Datagram Protocol)
+
+> [!important]
+> UDP 는 신뢰성 없는 프로토콜이다.
+
+- 즉, 전송한 데이터가 잘 전달되었는지 확인하지 않고 단지 데이터를 보내는 것으로 자신의 임무를 다한 것으로 생각한다.
+
+> [!important]
+> UDP 는 비연결지향 프로토콜이다.
+
+- 상대방에게 연결되지 않아도 상대방이 어디에 있다고 가정하고 보낸다.
+
+# 05. 인터넷 애플리케이션 프로토콜
+
+- OSI 7 계층 중 7계층에 속한다.
+- 자바 개발자들이 실제로 다뤄야 하는 부분으로 메일 전송, 파일 전송, 웹사이트 접속 등의 프로토콜이 이미 표준으로 정의되어 있다.
+
+## Telnet
+
+> [!Info]
+> 원격지 컴퓨터에 접근(access)하기 위한 프로토콜
+> - TCP Port : 23번
+
+- 텔넷을 이용하면 정식 사용자로 로그인해서, 자신에게 부여된 권한에 따라 그 컴퓨터 내에 있는 특정한 응용프로그램이나 데이터를 이용할 수 있다.
+
+## FTP (File Transfer Protocol)
+
+> [!info]
+> 파일을 효율적으로 전송하기 위해 만들어진 표준 프로토콜
+> - 접속을 관리하는 TCP Port : 21번
+> - 데이터 전송을 위한 TCP Port : 20번
+
+## 메일 전송 프로토콜
+### POP3 (Post Office Protocol Version 3)
+
+> [!info]
+> 이메일을 수신하기 위한 표준 프로토콜
+> - TCP Port : 110번
+
+- POP3 는 메일 서버가 사용자를 대신해 이메일을 수신하고 그 내용을 보관한다.
+- 사용자는 주기적으로 메일 서버에 있는 자신의 메일 수신함을 점검하고 수신된 메일이 있으면 자신의 로컬 컴퓨터로 내려받는다.
+- 이와 같이 POP3 는 이메일을 수신하기 위한 C/S (Client/Server) 프로토콜이다.
+
+### IMAP (Internet Message Access Protocol)
+
+> [!info]
+> 사용자의 로컬 컴퓨터에서 이메일에 접근하기 위한 표준 프로토콜
+> - TCP Port : 143번
+
+- IMAP 은 메일 서버를 이용해서 이메일을 수신하고 보관하는 POP3와 유사한 C/S 프로토콜이다.
+
+- 다만 IMAP 은 사용자가 메일의 제목과 송신자만을 보고, 실제로 메일을 내려받을 것인지 결정할 수 있다는 장점이 있다.
+- 또한 사용자가 메일 서버에 폴더나 우편함을 만들거나 관리할 수 있으며, 메시지를 지우거나 메시지의 일부 또는 전체 내용을 검색할 수도  있다.
+
+### SMTP (Simple Mail Protocol)
+
+> [!info]
+> 메일을 보내고 받는 데 사용되는 프로토콜
+> - TCP Port : 25번
+
+- 수신측에서의 큐 메시지 능력의 제한으로 인해, 대개 수신할 때는 POP3 나 IMAP 프로토콜 중 하나를 쓰는 것이 일반적이다.
+- 즉, 대부분의 경우, 
+  - 메일을 보낼 때는 SMTP 를 사용하고 
+  - 메일을 수신할 때는 POP3 나 IMAP 을 사용한다.
+
+## HTTP (HyperText Transfer Protocol)
+
+> [!info]
+> 인터넷에서 가장 중요하며 일반적으로 사용되는 프로토콜
+> - TCP Port : 80번
+
+- HTTP 는 상태를 유지하지 않는(stateless) 프로토콜로 클라이언트에서 서버로 접속해서 요청을 하면 서버에서는 클라이언트가 요청한 정보에 대해서 적절한 응답을 하고 접속을 끊어버린다.
+
+## Finger
+
+> [!info]
+> 메일 주소를 이용해서, 특정 유저에 관한 정보를 알려주는 데 사용하는 프로토콜
+> - TCP Port : 79번
+
+- 어떤 유저가 현재 자신의 시스템에 로그인한 상태인지, 또는 가장 최근에 로그인했던 세션과 그 컴퓨터에 있는 유저에 관해 유지되고 있는 데이터에 따라 여러 정보를 말해줄 수있다.
+- 하지만 대부분의 시스템 관리자들은 보안상의 이유로 핑거의 접근을 막아놓는다.
+
+## NNTP (Network News Transport Protocol)
+
+> [!info]
+> 유즈넷 뉴스그룹에 올려진 글들을 관리하기 위해 서버와 클라이언트에 의해 사용되는 프로토콜
+> - TCP Port : 119번
+
+# 06. TCP / IP 스택
+
+- OSI 7 계층은 이론적인 면과 하드웨어 장비적인 표준을 위해 나눠놓은 부분이 많다.
+- 따라서 실제 클라이언트들이 이용할 웹 서버 등을 만드는 애플리케이션 단위에서 개발자가 다루게 되는 부분은 아래 그림(1-7) 정도의 계층이다.
+
+![[자바 IO & NIO 네트워크 프로그래밍 - 그림 1-7.png]]
+
+- 이렇게 애플리케이션에서 보낸 HTTP 명령은 아래와 같은 과정을 거쳐 데이터 캡슐화가 이루어지게 된다.
+
+![[자바 IO & NIO 네트워크 프로그래밍 - 그림 1-8.png]]
+
+# 07. 소켓과 포트
+
+네트워크를 통해 애플리케이션 계층으로 들어온 데이터는 소켓과 포트를 이용하여 프로그램에서 인식해 사용하게 된다.
+
+![[자바 IO & NIO 네트워크 프로그래밍 - 그림 1-10.png]]
+
+- 위 그림(1-10)과 같이 소켓에는 애플리케이션을 위한 한 쌍의 데이터 큐가 있다.
+	- 전송을 위한 큐
+	- 수신을 위한 큐
+
+> [!important]
+> - 소켓은 보통 운영체제의 커널 안에 있는 메모리 영역으로 구현되고, 
+>   특정 포트 하나와 연결해서 애플리케이션과 통신하게 된다.
+> - 그림 1-10 과 같이 포트는 하나의 통신 창구가 되는 것이다.
+
+- 포트란 이미 정해진 번호며, 16비트 값으로 나타낸다.
+- 이는 개념적으로 개별 포트당 64KB 까지 될 수 있다는 뜻이다.
+
+- 포트 번호는 1에서 1023까지 IANA 에서 관리한다.
+	- 1 ~ 511
+		- 표준 TCP/IP 애플리케이션용으로 예약되어 있다.
+		- ex) FTP, TELNET, HTTP, SMTP
+	- 512 ~ 1023
+		- 대부분의 운영체제에서 우선권이 있는 프로그램이 사용할 수 있게 예약되어 있다.
+
+> [!summary]
+> 표준적으로 사용되는 애플리케이션을 개발하는 것이 아니라면 1024 이상의 포트번호를 사용해야 한다.
+
+![[자바 IO & NIO 네트워크 프로그래밍 - 그림 1-11.png]]
+
+> [!summary]
+> - IP 주소는 네트워크에서 시스템을 식별하는데 사용되고
+> - 포트번호는 특정 시스템의 애플리케이션에서 소켓을 식별하는 데 사용된다.
+> - 따라서 어떤 시스템의 특정 애플리케이션에서 만든 소켓과 연결하려면 
+>   IP 와 포트의 조합을 이용해서 접속하게 되는 것이다.
+
+# 08. 보안
+
+- 방화벽은 인터넷으로부터 각 도메인의 내부 네트워크를 보호한다.
+- 방화벽 시스템은 외부로부터 내부 정보망을 보호하기 위한 네트워크 구성요소 중 외부망과 통하는 유일한 창구이다.
+- 외부의 불법적인 침입으로부터 내부의 정보자산을 보호하고 유해정보 유입을 차단하기 위한 정책과 이를 지원하는 하드웨어 및 소프트웨어를 말한다.
+
+- 일반적으로 방화벽 시스템은 보안을 유지하고자 하는 시스템과 인터넷 사이에 설치되는 프록시 서버로서, 사전에 방화벽 시스템에 등록된 IP(Internet Protocol) 주소만 접근이 가능하도록 관리하는 일종의 선택적 차단막 역할을 수행한다.
+
+- 프록시 서버로 구성된 방화벽 안에서 실행되는 클라이언트 프로그램이라면 다음과 같이 자바의 시스템 프로퍼티(property)를 프로그램 파라미터 또는 프로그램 내부에서 설정해줘야 한다.
+
+```java
+System.setProperty("proxySet", "true");
+System.setProperty("http.proxyHost", "xxx");
+System.setProperty("http.proxyPort", "xxx");
+// 만약, User-Password 속성이 지정되어 있다면
+System.setProperty("http.proxyUser", "xxx");
+System.setProperty("http.proxyPassword", "xxx");
+```
 
