--- a/000. Inbox/04장. 바이트 스트림 - 바이트 단위 IO 클래스.md
+++ b/000. Inbox/04장. 바이트 스트림 - 바이트 단위 IO 클래스.md
@@ -6,3 +6,189 @@ tags:
   - Network
   - 책_자바_IO_NIO_네트워크_프로그래밍
 ---
+# 01. File 클래스
+
+IO 클래스는 크게 ==바이트 단위로 입출력하는 클래스==와 ==문자 단위로 입출력하는 클래스==로 나뉘어진다.
+
+> [!tip]- 문자 단위 입출력 클래스가 나타나게 된 계기
+> - 자바가 처음 등장했을 때에는 바이트 단위의 입출력 클래스만 있었다.
+> - 하지만 2바이트 문화권인 한국, 일본, 중국에서 바이트 단위의 IO 클래스만을 사용하기에는 불편한 점이 많았다.
+> - 영어권의 경우 1 바이트로 모든 글자를 표현할 수 있지만, 한국, 일본, 중국은 1바이트로 모든 글자를 표현할 수 없다. 
+> - 따라서 한국, 일본, 중국 등에서 사용되는 글자를 표현하려면 2바이트가 필요하며, 이러한 지역을 2 바이트 문화권이라 한다.
+
+기본은 바이트 단위로 입출력하는 클래스이므로 바이트 단위 IO 클래스를 중점으로 다룬다.
+
+> [!note] File 클래스란
+> 파일의 정보를 알아내거나, 파일을 삭제하거나, 이름을 변경할 때 사용되는 클래스
+
+> [!warning]- 디렉토리 역시 파일로 취급된다.
+> 자바를 만든 회사는 유닉스 계열 운영체제를 만드는 회사다.
+> 그리고 유닉스 시스템은 디렉토리도 파일로 취급한다.
+> 다만, 파일이나 디렉토리를 담아 둘 수 있는 특수한 용도의 파일로 취급을 하는 것이 다를 뿐이다.
+	
+| 생성자                            | 설명                                                           |
+| --------------------------------- | -------------------------------------------------------------- |
+| `File(File parent, String child)`   | parent 디렉토리에 child 라는 파일에 대한 File 객체를 생성한다. |
+| `File(String child)`                | child 라는 파일에 대한 File 객체를 생성한다.                   |
+| `File(String parent, String child)` | parent 디렉토리에 child 라는 파일에 대한 File 객체를 생성한다.                                                               |
+
+> [!tip]
+> - File 클래스 생성자는 파일 클래스에 대한 객체를 자바 힙 메모리에 생성하는 것이지, 실제로 파일 시스템에 파일을 생성하지 않는다.
+> - 그리고 File 클래스의 인자로 지정되는 파일명은 실제로 존재하지 않는 파일일 수도 있다.
+> - 이 경우 File 클래스에 있는 exists() 메소드를 이용해서 실제로 존재하는지의 유무를 확인할 수 있다.
+
+![[자바 IO & NIO 네트워크 프로그래밍 - 표 4-2.png]]
+
+## 1. File 클래스를 이용한 파일의 정보 구하기
+
+```java
+import java.io.File;  
+import java.io.IOException;  
+  
+public class FileInfo {  
+    public static void main(String[] args) {  
+        if (args.length != 1) {  
+            System.out.println("사용법 : java FileInfo 파일명");  
+            System.exit(0);  
+        }  
+  
+        File f = new File("/Users/kangbada", args[0]);  
+        if (f.exists()) {  
+            System.out.println("length : " + f.length());  
+            System.out.println("canRead : " + f.canRead());  
+            System.out.println("canWrite : " + f.canWrite());  
+            System.out.println("getAbsolutePath : " + f.getAbsolutePath());  
+            try {  
+                System.out.println("getCanonicalPath : " + f.getCanonicalPath());  
+            } catch (IOException e) {  
+                System.out.println(e);  
+            }  
+            System.out.println("getName : " + f.getName());  
+            System.out.println("getParent : " + f.getParent());  
+            System.out.println("getPath : " + f.getPath());  
+  
+        } else {  
+            System.out.println("파일이 존재하지 않습니다");  
+        }  
+    }  
+}
+```
+
+![[자바 IO & NIO 네트워크 프로그래밍 - 그림 4-1.png|300]]
+
+## 2. File 클래스를 이용한 파일 삭제
+
+> [!note] `delete()` 메소드는 파일이나 디렉토리를 삭제할 때 사용된다.
+
+> [!warning] 디렉토리의 경우, 디렉토리가 비어있을 때에만 삭제가 된다.
+
+```java
+import java.io.File;  
+  
+public class FileDelete {  
+    public static void main(String[] args) {  
+        if (args.length != 1) {  
+            System.out.println("사용법 : java FileDelete 파일명");  
+            System.exit(0);  
+        }  
+  
+        File f = new File("/Users/kangbada", args[0]);  
+        if (f.exists()) {  
+            boolean deleteflag = f.delete();  
+            if (deleteflag) {  
+                System.out.println("파일 삭제를 성공했습니다.");  
+            } else {  
+                System.out.println("파일 삭제를 실패했습니다.");  
+            }  
+        } else {  
+            System.out.println("파일이 존재하지 않습니다.");  
+        }  
+    }  
+}
+```
+
+## 3. File 클래스를 이용한 디렉토리의 파일 목록 출력
+
+```java
+import java.io.File;  
+  
+public class FileList {  
+    public static void main(String[] args) {  
+        File f = new File("/Users/kangbada");  
+        if (!f.exists()) {  
+            System.out.println("디렉토리가 존재하지 않습니다.");  
+            System.exit(0);  
+        }  
+  
+        if (f.isDirectory()) {  
+            File[] fileList = f.listFiles();  
+            for (int i = 0; i < fileList.length; i++) {  
+                System.out.println(fileList[i].getName());  
+                System.out.println("\t");  
+                if (fileList[i].isDirectory()) {  
+                    System.out.println("디렉토리");  
+                } else {  
+                    System.out.println("파일");  
+                    System.out.println("\t");  
+                    System.out.println(fileList[i].length());  
+                }  
+            }  
+        } else {  
+            System.out.println("디렉토리가 아닙니다.");  
+        }  
+    }  
+}
+```
+
+
+## 4. File 클래스를 이용한 임시 파일의 생성과 삭제
+
+> [!note] createTempFile() : 임시 파일을 생성한다.
+
+- File 클래스는 임시 파일을 생성하는 `createTempFile()` 이라는 static 한 메소드를 포함하고 있다.
+- `createTempFile()` 메소드를 이용해서 생성되는 임시 파일의 경우, 파일의 앞 글자와 뒷글자만 사용자가 정의하면 중간의 문자열은 임의 글자로 자동 지정된다.
+- 이 경우, 자동으로 생성되는 파일명은 임시 파일이 저장되는 디렉토리에서는 유일한 이름으로 지정된다.
+
+> [!note] deleteOnExit() : JVM 이 종료될 때 생성된 임시 파일을 삭제시킨다.
+
+- 위에서 만든 임시 파일들은 사용이 끝나면 삭제되어야 한다.
+- File 클래스는 이런 파일시스템에 저장된 임시 파일을 삭제하기 위해 `deleteOnExit()` 메소드를 제공한다.
+- 해당 메소드를 호출하면 해당 파일은 JVM 이 종료될 때 자동으로 삭제된다.
+
+```java
+import java.io.File;  
+import java.io.IOException;  
+  
+public class TempFile {  
+    public static void main(String[] args) {  
+        try {  
+            File f = File.createTempFile("tmp_", ".dat");  
+            System.out.println(f.getAbsolutePath());  
+            System.out.println("6초 동안 멈춰있습니다.");  
+            try {  
+                Thread.sleep(6000); // 6초 동안 프로그램이 멈춰 있는다.  
+            } catch (InterruptedException e) {  
+                System.out.println(e);  
+            }  
+            f.deleteOnExit(); // JVM 이 종료될 때 임시 파일을 자동으로 삭제한다.  
+        } catch (IOException e) {  
+            System.out.println(e);  
+        }  
+    }  
+}
+```
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
