update: 04장. 바이트 스트림

--- a/000. Inbox/04장. 바이트 스트림 - 바이트 단위 IO 클래스.md
+++ b/000. Inbox/04장. 바이트 스트림 - 바이트 단위 IO 클래스.md
@@ -178,14 +178,477 @@ public class TempFile {
 }
 ```
 
+# 02. 바이트 단위 IO 클래스
 
+- 바이트 단위 IO 클래스는 가장 기본이 되는 IO 클래스다.
+- 컴퓨터에 존재하는 모든 데이터는 바이트 단위로 구성되어 있기 때문이다.
 
+![[자바 IO & NIO 네트워크 프로그래밍 - 그림 4-6.png]]
 
+## 1. InputStream 과 OutputStream
 
+InputStream 과 OutputStream 은 모든 바이트 스트림의 최상위 클래스다.
 
+### InputStream 주요 메소드
 
+| 메소드                                     | 설명                                                                                                                                       |
+| ------------------------------------------ | ------------------------------------------------------------------------------------------------------------------------------------------ |
+| `int available() throws IOException`       | 현재 읽을 수 있는 바이트 수를 반환한다.                                                                                                    |
+| `void close() throws IOException`          | 입력 스트림을 닫는다.                                                                                                                      |
+| `int read() throw IOException`             | 입력 스트림에서 한 바이트를 읽어 int 값으로 반환한다. 더 이상 읽어 들여야 할 내용이 없을 경우, -1 을 반환한다.                             |
+| `int read(byte buf[]) throws IOException`  | 입력 스트림에서 buf[] 크기만큼을 읽어 buf 에 저장하고, 읽은 바이트 수를 반환한다. 더 이상 읽어 들여야 할 내용이 없을 경우, -1 을 반환한다. |
+| `int skip(long numBytes) throws IOException` | numBytes 로 지정된 바이트를 무시하고, 무시된 바이트 수를 반환한다.                                                                         |
 
+> [!question]- InputStream 은 바이트 단위로 입력받기 위한 클래스인데도 `read()` 는 왜 byte 형을 반환하지 않고 int 형을 반환할까?
+> - byte 형으로 반환할 경우, 파일 끝을 나타내는 기호로 사용할 마땅한 값이 없기 때문이다.
+> - 그래서 -1 을 반환할 수 있는 int형을 사용하게 된다.
+> - 따라서 `read()` 메소드는 정수 하위 8비트에 실제로 읽어들인 값을 채워서 반환하게 된다.
 
+### OutputStream 주요 메소드
+
+| 메소드                                                           | 설명                                |
+| ---------------------------------------------------------------- | ----------------------------------- |
+| `void close() throws IOException`                                | 출력 스트림을 닫는다.               |
+| `void flush() throws IOException`                                | 버퍼에 남은 출력 스트림을 출력한다. |
+| `void write(int i) throws IOException`                           | 정수 i 의 하위 8비트를 출력한다.    |
+| `void write(byte buf[]) throws IOException`                      | buf 배열의 내용을 출력한다.         |
+| `void write(byte buf[], int index, int size) throws IOException` | buf 배열의 index 위치부터 size 만큼의 바이트를 출력한다.                                    |
+
+### System.in 을 이용해서 키보드로부터 입력받기
+
+```java
+import java.io.IOException;  
+  
+public class SystemInputTest {  
+    public static void main(String[] args) {  
+        int i = 0;  
+  
+        try {  
+            while ((i = System.in.read()) != -1) {  
+                System.out.write(i);  
+            }  
+        } catch (IOException e) {  
+            System.out.println(e);  
+        }  
+    }  
+}
+```
+
+- System.in 은 InputStream 형식이며, 표준 입력(보통 키보드 입력)을 받는다.
+
+> [!important] 키보드에서 문자를 누른다고 해서 곧장 `read()` 메소드를 통해서 읽어 들이는 것이 아니다.
+> - 키보드를 눌렀을 때, 눌려진 값은 운영체제가 관리하는 키보드 버퍼에 쌓이고 JVM 에게는 값이 전달되지 않기 때문이다.
+> - JVM 에게 값을 전달하려면 키보드의 엔터 키를 입력해야 한다.
+> - 엔터 키를 입력하게 되면 키보드 버퍼에 있던 값과 엔터 키 값이 한꺼번에 JVM 에게 전달되는 것이다.
+
+- 이렇게 전달되는 문자열은 `read()` 메소드를 통해서 차례대로 한 바이트씩 읽어 들일 수 있다.
+- 그리고 한 바이트씩 계속해서 읽어 들이며 while 문 안의 내용을 실행하게 된다.
+- 키보드로부터 입력 받을 때 파일의 끝을 나타내려면 Ctrl + Z 키를 동시에 누른 후 엔터 키를 입력하면 된다.
+
+- System.out 은 PrintStream 형식이다.
+- PrintStream 은 OutputStream 을 상속받고 있기 때문에 OutputStream 에 있는 `write()` 메소드를 사용할 수 있다.
+- 즉, `read()` 메소드로부터 읽어들인 정수 하위 8비트 그대로를 표준 출력 장치에 출력하게 된다.
+
+## 2. FileInputStream 과 FileOutputStream
+
+- FileInputStream, FileOutputStream 은 파일로부터 바이트 단위로 입력받고, 대상 파일에 바이트 단위로 출력할 수 있는 클래스다.
+
+- FileInputStream 과 FileOutputStream 의 생성자는 파일명이나 파일 정보가 있는 File 클래스에 대한 객체를 전달받는다.
+- 그리고 FileInputStream 의 경우, 생성자에 전달한 파일명이 실제로 존재하지 않는 파일명이면 `java.io.FileNotFoundException` 을 발생시킨다.
+
+### FileInputStream 생성자
+
+![[자바 IO & NIO 네트워크 프로그래밍 - 표 4-5.png]]
+### FileOutputStream 생성자
+
+![[자바 IO & NIO 네트워크 프로그래밍 - 표 4-6.png]]
+
+### 파일의 내용을 읽어 들여 화면에 출력하는 프로그램
+
+파일로부터 한 바이트씩 읽어 들여 화면에 한 바이트씩 출력하게 된다.
+
+```java
+import java.io.FileInputStream;  
+import java.io.IOException;  
+  
+public class FileView {  
+    public static void main(String[] args) {  
+        FileInputStream fis = null;  
+        try {  
+            fis = new FileInputStream("/Users/kangbada/test");  
+            int i = 0;  
+            while ((i = fis.read()) != -1) {  
+                System.out.write(i);  
+            }  
+        } catch (Exception e) {  
+            System.out.println(e);  
+        } finally {  
+            try {  
+                fis.close();  
+            } catch (IOException e) {  
+                System.out.println(e);  
+            }  
+        }  
+    }  
+}
+```
+
+- System.in, System.out, System.err 의 세 가지 스트림을 제외하고, IO 클래스를 사용한 후에는 반드시 `close()` 메소드를 사용함으로써 사용했던 자원을 반납해야 한다.
+
+- FileInputStream 의 `read()` 메소드는 파일의 시작부터 차례대로 바이트 단위로 읽어 들인다.
+- 읽어 들인 값은 정수 하위 8비트에 저장해서 반환되고, 반환받은 값은 System.out 에 있는 `write()` 메소드를 이용해서 화면에 출력하게 된다.
+
+#### 파일을 읽어 출력하는 프로그램의 개선
+
+앞의 예제는 효율이 떨어지는 문제가 있다.
+
+##### 운영체제 동작방식
+
+- 운영체제는 하드웨어를 제어하는 기능이 있다.
+- 자바에서 파일을 읽어 들이라고 명령을 내리면, 내부적으로는 운영체제에게 부탁해서 물리적 장치인 하드디스크로부터 읽어오게 되는 것이다.
+
+- 자바 프로그래밍으로 1바이트를 읽어오라고 실행하면, 운영체제는 실제로는 1 바이트를 읽지 않고 보통 인접한 256 바이트나 512 바이트를 읽게 된다.
+
+> [!warning] 만약 1000 바이트의 파일을 1 바이트씩 읽어오라고 실행하면, 내부적으로는 256 바이트나 512 바이트씩 1000번 읽어온다는 것이다.
+
+- 이런 문제를 해결하려면 1바이트 씩 읽어 들이는 것이 아니라, 운영체제가 실제로 읽어 들이는 단위로 읽어 들여야 한다.
+- 즉, 1 바이트씩이 아니라 256바이트나 512바이트씩 읽어오라고 운영체제에 명령을 내리는 것이다.
+- 만약 512바이트씩 읽어오라 한다면 1000바이트 파일을 2번만 읽어들이면 된다.
+
+##### 예제코드
+
+```java
+import java.io.FileInputStream;  
+import java.io.IOException;  
+  
+public class FileVew2 {  
+    public static void main(String[] args) {  
+        FileInputStream fis = null;  
+        try {  
+            fis = new FileInputStream("/Users/kangbada/test");  
+            int readcount = 0;  
+            byte[] buffer = new byte[512];  
+            while ((readcount = fis.read(buffer)) != -1) {  
+                System.out.write(buffer, 0, readcount);  
+            }  
+        } catch (Exception e) {  
+            System.out.println(e);  
+        } finally {  
+            try {  
+                fis.close();  
+            } catch (IOException e) {  
+                System.out.println(e);  
+            }  
+        }  
+    }  
+}
+```
+
+- `read()` 메소드에 512바이트 배열을 전달함으로써 파일로 부터 읽어들인 내용이 바이트 배열인 buffer 에 저장된다.
+- 저장된 바이트 배열은 `System.out` 에 있는 `write()` 메소드에 의해서 바이트 배열의 0번째 부터 읽어들인 바이트의 수만큼만 화면에 출력한다.
+
+### 파일 복사
+
+```java
+import java.io.FileInputStream;  
+import java.io.FileOutputStream;  
+import java.io.IOException;  
+  
+public class FileStreamCopy {  
+    public static void main(String[] args) {  
+        FileInputStream fis = null;  
+        FileOutputStream fos = null;  
+  
+        try {  
+            fis = new FileInputStream("/Users/kangbada/test");  
+            fos = new FileOutputStream("/Users/kangbada/test_copy");  
+  
+            byte[] buffer = new byte[512];  
+            int readcount = 0;  
+            while ((readcount = fis.read(buffer)) != -1) {  
+                fos.write(buffer, 0, readcount);  
+            }  
+            System.out.println("복사가 완료되었습니다.");  
+        } catch (Exception e) {  
+            System.out.println(e);  
+        }finally {  
+            try {  
+                fis.close();  
+            } catch (IOException e) {  
+                try {  
+                    fos.close();  
+                } catch (IOException ex) {  
+                    System.out.println(ex);  
+                }  
+            }  
+        }  
+    }  
+}
+```
+
+## 3. DataInputStream 과 DataOutputStream
+
+- DataInputStream 과 DataOutputStream 은 자바의 기본형 데이터인 int, float, double, boolean, short, byte 등의 정보를 입력하고 출력하는 데 알맞은 클래스다.
+
+- DataInputStream, DataOutputStream 모두 생성자에서 InputStream 과 OutputStream 을 받아들인다.
+- 이는 다른 바이트 스트림을 통해서 읽어 들이거나 쓴다는 의미다.
+
+### DataInputStream 생성자
+
+![[자바 IO & NIO 네트워크 프로그래밍 - 표 4-7.png]]
+
+![[자바 IO & NIO 네트워크 프로그래밍 - 표 4-8.png]]
+
+### DataOutputStream 생성자
+
+![[자바 IO & NIO 네트워크 프로그래밍 - 표 4-9.png]]
+
+![[자바 IO & NIO 네트워크 프로그래밍 - 표 4-10.png]]
+
+### DataInputStream 과 DataOutputStream 을 이용한 파일의 저장과 읽기
+
+```java
+import java.io.DataOutputStream;  
+import java.io.FileOutputStream;  
+  
+public class DataOutputStreamTest {  
+    public static void main(String[] args) {  
+        try (FileOutputStream fos = new FileOutputStream("/Users/kangbada/test");  
+             DataOutputStream dos = new DataOutputStream(fos)) {  
+            dos.writeBoolean(true);  
+            dos.writeByte((byte) 5);  
+            dos.writeInt(100);  
+            dos.writeDouble(200.5);  
+            dos.writeUTF("hello world");  
+            System.out.println("저장했습니다.");  
+  
+        } catch (Exception e) {  
+            System.out.println(e);  
+        }  
+    }  
+}
+```
+
+```java
+import java.io.DataInputStream;  
+import java.io.FileInputStream;  
+  
+public class DataInputStreamTest {  
+    public static void main(String[] args) {  
+        try (FileInputStream fis = new FileInputStream("/Users/kangbada/test");  
+             DataInputStream dis = new DataInputStream(fis)) {  
+             
+            boolean b = dis.readBoolean();  
+            System.out.println("boolean = " + b);  
+  
+            byte b2 = dis.readByte();  
+            System.out.println("byte = " + b2);  
+  
+            int i = dis.readInt();  
+            System.out.println("int = " + i);  
+  
+            double d = dis.readDouble();  
+            System.out.println("double = " + d);  
+  
+            String s = dis.readUTF();  
+            System.out.println("String = " + s);  
+              
+        } catch (Exception e) {  
+            System.out.println(e);  
+        }  
+    }  
+}
+```
+
+## 4. ByteArrayInputStream 과 ByteArrayOutputStream
+
+- ByteArrayInputStream 은 바이트 배열을 차례대로 읽어 들이기 위한 클래스다.
+- ByteArrayOutputStream 은 내부적으로 저장 공간이 있어서, ByteArrayOutputStream 에 있는 메소드를 이용해서 출력하게 되면, 출력되는 모든 내용들이 내부적인 저장 공간에 쌓이게 된다.
+- 그 후에 ByteArrayOutputStream 에 있는 `toByteArray()` 를 실행하면, 저장된 모든 내용이 바이트 배열로 반환된다.
+
+### ByteArrayInputStream 생성자
+
+![[자바 IO & NIO 네트워크 프로그래밍 - 표 4-11.png]]
+
+### ByteArrayOutputStream 생성자
+
+![[자바 IO & NIO 네트워크 프로그래밍 - 표 4-12.png]]
+
+![[자바 IO & NIO 네트워크 프로그래밍 - 표 4-13.png]]
+
+### 파일 내용을 바이트 배열에 저장한 후 화면에 출력하기
+
+```java
+import java.io.ByteArrayInputStream;  
+import java.io.ByteArrayOutputStream;  
+import java.io.FileInputStream;  
+  
+public class ByteArrayInputOutputTest {  
+    public static void main(String[] args) {  
+        byte[] fileArray = null;  
+        try (FileInputStream fis = new FileInputStream("/Users/kangbada/test");  
+             ByteArrayOutputStream baos = new ByteArrayOutputStream()) {  
+  
+            int readcount = 0;  
+            byte[] buffer = new byte[512];  
+            while ((readcount = fis.read(buffer)) != -1) {  
+                baos.write(buffer, 0, readcount);  
+            }  
+            fileArray = baos.toByteArray();  
+  
+        } catch (Exception e) {  
+            System.out.println(e);  
+        }  
+  
+        try (ByteArrayInputStream bais = new ByteArrayInputStream(fileArray)) {  
+            int readcount = 0;  
+            byte[] buffer = new byte[512];  
+            while ((readcount = bais.read(buffer)) != -1) {  
+                System.out.write(buffer, 0, readcount);  
+            }  
+  
+        } catch (Exception e) {  
+            System.out.println(e);  
+        }  
+    }  
+}
+```
+
+### 파일이나 배열의 내용을 읽어 들여 출력하는 클래스 작성
+
+```java
+import java.io.ByteArrayInputStream;  
+import java.io.FileInputStream;  
+  
+public class FileArrayInputStreamTest {  
+    public static void main(String[] args) {  
+        String arg = "";  
+        if (arg.equals("file")) {  
+            try (FileInputStream fis = new FileInputStream("/Users/kangbada/test")) {  
+                int readcount = 0;  
+                byte[] buffer = new byte[512];  
+                while ((readcount = fis.read(buffer)) != -1) {  
+                    System.out.write(buffer, 0, readcount);  
+                }  
+            } catch (Exception e) {  
+                System.out.println(e);  
+            }  
+  
+        } else if(arg.equals("array")) {  
+            byte[] abc = new byte[26];  
+            for (int i = 0; i < 26; i++) {  
+                abc[i] = (byte) ('a' + i);  
+            }  
+  
+            try (ByteArrayInputStream bais = new ByteArrayInputStream(abc)) {  
+                int readcount = 0;  
+                byte[] buffer = new byte[512];  
+                while ((readcount = bais.read(buffer)) != -1) {  
+                    System.out.write(buffer, 0, readcount);  
+                }  
+            } catch (Exception e) {  
+                System.out.println(e);  
+            }  
+        }  
+    }  
+}
+```
+
+## 5. PipedInputStream 과 PipedOutputStream
+
+- 유닉스는 전통적으로 작은 프로그램을 선호한다. 
+- 유닉스 시스템은 셸 프로그래밍과 파이프 기호를 이용하고 작은 프로그램을 연동해서 좀더 강력한 기능을 사용할 수 있기 때문이다.
+- 파이프 기호는 앞 명령의 표준 출력을 뒤 명령의 입력으로 바꾸는 역할을 한다.
+
+- 자바에서 제공하는 PipedInputStream 과 PipedOutputStream 도 위의 파이프 기호와 같은 기능을 수행한다.
+- PipedOutputStream 으로 출력한 결과를 PipedInputStream 을 통해서 읽어 들일 수 있게 만들 수 있는 것이다.
+
+- 보통 이러한 예는 멀티스레드에서 종종 사용하게 된다.
+- 하나의 스레드가 읽어 들인 내용을 다른 스레드에게 전달하고자 할 때 PipedInputStream 과 PipedOutputStream 을 이용해서 전달하는 것이다.
+
+### PipedInputStream 생성자
+
+![[자바 IO & NIO 네트워크 프로그래밍 - 표 4-14.png]]
+
+![[자바 IO & NIO 네트워크 프로그래밍 - 표 4-16.png]]
+
+### PipedOutputStream 생성자
+
+![[자바 IO & NIO 네트워크 프로그래밍 - 표 4-15.png]]
+
+![[자바 IO & NIO 네트워크 프로그래밍 - 표 4-17.png]]
+
+### 예제코드
+
+```java
+import java.io.PipedInputStream;  
+import java.io.PipedOutputStream;  
+  
+public class SystemStream {  
+    public static void main(String[] args) {  
+        try {  
+            for (int i = 0; i < 5; i++) {  
+                PipedInputStream writeIn = new PipedInputStream();  
+                PipedOutputStream readOut = new PipedOutputStream(writeIn); // writeIn 으로 들어간 데이터는 readOut 으로 나갈 것이다.
+  
+                ReadThread rt = new ReadThread(System.in, readOut);  
+                ReadThread wt = new ReadThread(writeIn, System.out);  
+  
+                rt.start();  
+                wt.start();  
+            }  
+        } catch (Exception e) {  
+            e.printStackTrace();  
+        }  
+    }  
+}
+```
+
+```java
+import java.io.InputStream;  
+import java.io.OutputStream;  
+  
+public class ReadThread extends Thread {  
+    private InputStream pi;  
+    private OutputStream po;  
+  
+    public ReadThread(InputStream pi, OutputStream po) {  
+        this.pi = pi;  
+        this.po = po;  
+    }  
+  
+    @Override  
+    public void run() {  
+        byte[] buffer = new byte[512];  
+        int bytes_read = 0;  
+        try {  
+            while ((bytes_read = pi.read(buffer)) != -1) {  
+                po.write(buffer, 0, bytes_read);  
+            }  
+        } catch (Exception e) {  
+            System.out.println(e);  
+        }  
+    }  
+}
+```
+
+- PipedInputStream 을 생성한 후, 생성한 객체를 PipedOutputStream 의 생성자에 지정했다.
+- 이러면 readOut 에 있는 출력 메소드를 사용하게 되면, writeIn 에서 읽어들일 수 있게 된다.
+
+- 스레드 두 개를 생성한다.
+- 첫 번째 스레드는 표준 입력 장치로부터 입력을 받아 PipedOutputStream 인 readOut 을 통해서 출력하는 스레드
+- 두 번째 스레드는 PipedInputStream 인 writeIn 으로부터 읽어 들여 표준 출력 장치에 출력하는 스레드다.
+
+- System.in -> readOut -> writeIn -> System.out 순서대로 흘러간다.
+- 그래서 키보드로 "abc" 를 입력하면 readOut 으로 "abc" 가 들어가고 이것이 Pipe 를 통해 writeIn 으로 다시 들어간 다음 System.out 으로 나가는 것이다.
+
+- 위에서는 PipedOutputStream 에서 PipedInputStream 과 연결을 수행하였지만, 반대로 PipedInputStream 에서 PipedOutputStream 으로 연결을 수행하여도 상관없다.
+
+```java
+// 이렇게 해도 괜찮다는 뜻이다.
+PipedOutputStream readOut = new PipedOutputStream();  
+PipedInputStream writeIn = new PipedInputStream(readOut);
+```
 
 
 
