update: 05장. 문자 스트림 - 문자 단위 IO 클래스

--- a/002. Development/자바 IO & NIO 네트워크 프로그래밍/05장. 문자 스트림 - 문자 단위 IO 클래스.md
+++ b/002. Development/자바 IO & NIO 네트워크 프로그래밍/05장. 문자 스트림 - 문자 단위 IO 클래스.md
@@ -8,3 +8,182 @@ tags:
 ---
 # 01. 문자 단위 IO 클래스
 
+- 문자 단위 IO 클래스는 문자 단위로 입출력을 한다. (바이트 단위로 입출력하지 않는다)
+- 입력 스트림의 경우 Reader 를, 출력 스트림의 경우에는 Writer 를 상속받는다.
+
+![[자바 IO & NIO 네트워크 프로그래밍 - 그림 5-1.png]]
+
+# 02. Reader 와 Writer
+
+- Reader 와 Writer 는 문자 단위 입출력 스트림에서 가장 기본이 되는 클래스로써 모두 추상 클래스다.
+
+- Reader 와 Writer 는 InputStream, OutputStream 과 사용법이 거의 비슷하다.
+	- 다만, 바이트 단위 입출력 스트림은 바이트, 바이트 배열을 읽고 쓰고, 
+	- 문자 단위 입출력 스트림은 문자나 문자 배열을 읽고 쓴다.
+
+## Reader 클래스의 중요 메소드
+
+![[자바 IO & NIO 네트워크 프로그래밍 - 표 5-1.png]]
+
+## Writer 클래스의 중요 메소드
+
+![[자바 IO & NIO 네트워크 프로그래밍 - 표 5-2-1.png]]
+![[자바 IO & NIO 네트워크 프로그래밍 - 표 5-2-2.png]]
+
+# 03. InputStreamReader 와 OuputStreamWriter
+
+## 생성자의 의미
+
+- InputStreamReader 와 OuputStreamWriter 은 Reader 와 Writer 를 상속한 클래스이며, 각각 InputStream 과 OutputStream 을 생성자에서 받아들인다.
+
+- 즉, InputStreamReader 는 바이트 단위로 읽어 들이는 InputStream 을 통해 데이터를 읽어 들여 문자 단위로 읽어 들이며,
+- OutputStreamWriter 는 바이트 단위로 쓰는 OutputStream 을 통해 문자 단위로 쓰는 것을 바이트 단위로 쓰도록 변형한다.
+
+- Stream 클래스에서 생성자가 중요한 이유는 이처럼 생성자에 전달한 인자가 무엇이냐에 따라서 읽어 들어야 할 대상과 써야 할 대상이 달라지기 때문이다.
+
+![[자바 IO & NIO 네트워크 프로그래밍 - 그림 5-2.png]]
+
+![[자바 IO & NIO 네트워크 프로그래밍 - 그림 5-3.png]]
+
+### InputStreamReader 생성자
+
+![[자바 IO & NIO 네트워크 프로그래밍 - 표 5-3.png]]
+### OutputStreamWriter 생성자
+
+![[자바 IO & NIO 네트워크 프로그래밍 - 표 5-4.png]]
+
+## 1. 문자 단위로 파일 내용을 읽어 들여 화면에 출력하기
+
+```java
+import java.io.FileInputStream;  
+import java.io.InputStreamReader;  
+import java.io.OutputStreamWriter;  
+  
+public class StreamReaderTest {  
+    public static void main(String[] args) {  
+  
+        try (InputStreamReader isr = new InputStreamReader(new FileInputStream("/Users/kangbada/test"));  
+             OutputStreamWriter osw = new OutputStreamWriter(System.out)) {  
+  
+            char[] buffer = new char[512];  
+            int readcount = 0;  
+            while ((readcount = isr.read(buffer)) != -1) {  
+                osw.write(buffer, 0, readcount);  
+            }  
+  
+        } catch (Exception e) {  
+            throw new RuntimeException(e);  
+        }  
+    }  
+}
+```
+
+# 04. FileReader 와 FileWriter
+
+- FileReader 와 FileWriter 는 FileInputStream 과 FileOutputStream 과 기능이나 사용법이 거의 비슷하다.
+- 다만 FileReader 와 FileWriter 는 문자 단위로 입출력을 수행한다.
+
+- FileReader 와 FileWriter 는 각각 InputStreamReader 와 OuputStreamWriter 의 자식 클래스로 유니코드 문자열과 바이트 변환 기능을 포함하고 있다.
+
+## 생성자
+
+![[자바 IO & NIO 네트워크 프로그래밍 - 표 5-5.png]]
+
+![[자바 IO & NIO 네트워크 프로그래밍 - 표 5-6.png]]
+
+## 1. FileReader 와 FileWriter 를 이용한 텍스트 파일 복사
+
+> [!warning]
+> - 실제로 파일을 복사하는 프로그램을 개발할 때는 바이트 단위 IO 클래스인 FileInputStream 과 FileOutputStream 을 이용하는 것이 좋다. 
+> - 모든 파일이 바이트 단위로 구성되어 있기 때문이다.
+
+```java
+import java.io.FileReader;  
+import java.io.FileWriter;  
+  
+public class FileCopy {  
+    public static void main(String[] args) {  
+        try (FileReader fr = new FileReader("/Users/kangbada/test");  
+             FileWriter fw = new FileWriter("/Users/kangbada/test2")) {  
+  
+            char[] buffer = new char[512];  
+            int readcount = 0;  
+            while ((readcount = fr.read(buffer)) != -1) {  
+                fw.write(buffer, 0, readcount);  
+            }  
+  
+        } catch (Exception e) {  
+  
+        }  
+    }  
+}
+```
+
+# 05. BufferedReader 와 BufferedWriter
+
+- BufferedReader 와 BufferedWriter 는 말 그대로 Buffer 에 있는 IO 클래스이다.
+
+> [!note] Buffer 를 이용하면 입출력 시 병목현상을 줄일 수 있다.
+> - Buffer 란 다른 말로 메모리를 의미하는데, 메모리가 있기 때문에 입출력 시에 병목현상을 줄일 수 있다.
+> - 빠른 속도로 쓰고자 할 때 읽어 들여야 할 대상과 써야 할 대상 간의 속도 차이 때문에 병목현상이 일어날 수있기 때문이다.
+> - 따라서 중간에 버퍼를 둠으로써 읽기와 쓰기 시 성능이 향상될 수 있다.
+
+> [!warning]
+> BufferedWriter 의 경우, 버퍼가 있기 때문에 반드시 `flush()` 메소드를 이용하거나 `close()` 메소드를 호출해줘야만 한다.
+
+- 그렇지 않고 프로그램을 종료하게 되면 버퍼의 내용을 완전하게 쓸 수 없게 된다.
+- 특히 네트워크 프로그래밍의 경우에는 `write()` 메소드를 호출한 후에는 반드시 `flush()` 메소드를 호출해줘야 한다.
+
+## 생성자 및 메소드
+
+![[자바 IO & NIO 네트워크 프로그래밍 - 표 5-7.png]]
+
+- Reader 를 인자로 전달받는다는 것은 기존의 Reader 에게 Buffer 를 가지게 한다는 의미이다.
+
+![[자바 IO & NIO 네트워크 프로그래밍 - 표 5-8.png]]
+
+![[자바 IO & NIO 네트워크 프로그래밍 - 표 5-9.png]]
+
+## 1. 앞서 작성한 파일 복사 프로그램 개선
+
+```java
+import java.io.BufferedReader;  
+import java.io.BufferedWriter;  
+import java.io.FileReader;  
+import java.io.FileWriter;  
+  
+public class BufferFileCopy {  
+    public static void main(String[] args) {  
+        try (FileReader fr = new FileReader("/Users/kangbada/test");  
+             BufferedReader br = new BufferedReader(fr);  
+             FileWriter fw = new FileWriter("/Users/kangbada/test2");  
+             BufferedWriter bw = new BufferedWriter(fw)) {  
+  
+            char[] buffer = new char[512];  
+            int readcount = 0;  
+            while ((readcount = br.read(buffer)) != -1) {  
+                bw.write(buffer, 0, readcount);  
+            }  
+            bw.flush();  
+  
+        } catch (Exception e) {  
+  
+        }  
+    }  
+}
+```
+
+# 06. PrintWriter
+
+
+
+
+
+
+
+
+
+
+
+
+
