--- a/002. Development/자바 IO & NIO 네트워크 프로그래밍/05장. 문자 스트림 - 문자 단위 IO 클래스.md
+++ b/002. Development/자바 IO & NIO 네트워크 프로그래밍/05장. 문자 스트림 - 문자 단위 IO 클래스.md
@@ -175,15 +175,117 @@ public class BufferFileCopy {
 
 # 06. PrintWriter
 
+- `print()`, `println()` 등 다양한 출력 메소드를 지원한다.
+- 출력을 편하게 해주는 클래스이다.
+	- 생성자로 OutputStream, Writer 의 구현체를 받아서 여기에 담긴 데이터를 다양한 방식으로 쉽게 출력하도록 도와주는 클래스
+- 당연하지만 PrintReader 는 존재하지 않는다.
 
+## 생성자 및 메소드
 
+![[자바 IO & NIO 네트워크 프로그래밍 - 표 5-10.png]]
 
+![[자바 IO & NIO 네트워크 프로그래밍 - 표 5-11.png]]
 
+## 1. 키보드로부터 한 줄씩 입력 받아 파일에 저장하기
 
+```java
+import java.io.BufferedReader;  
+import java.io.BufferedWriter;  
+import java.io.FileWriter;  
+import java.io.InputStreamReader;  
+import java.io.PrintWriter;  
+  
+public class LineWriter {  
+    public static void main(String[] args) {  
+        try (BufferedReader br = new BufferedReader(new InputStreamReader(System.in));  
+             PrintWriter pw = new PrintWriter(new BufferedWriter(new FileWriter("/Users/kangbada/test")), true)) {  
+  
+            String line;  
+            while ((line = br.readLine()) != null) {  
+                System.out.println("읽어들인 문자열 : " + line);  
+                pw.println(line);  
+            }  
+  
+        } catch (Exception e) {  
+  
+        }  
+    }  
+}
+```
 
+# 07. CharArrayReader 와 CharArrayWriter
 
+- CharArrayReader 와 CharArrayWriter 는 
+ByteArrayReaderStream 과 BtyeArrayWriterStream 과 사용법이 유사하다.
 
+- 다른점은 문자 배열로부터 읽어 들이고 CharArrayWriter 에 출력한 내용을 문자 배열로 반환받을 수 있다는 점이다.
 
+## 생성자
 
+![[자바 IO & NIO 네트워크 프로그래밍 - 표 5-12.png]]
 
+![[자바 IO & NIO 네트워크 프로그래밍 - 표 5-13.png]]
+
+![[자바 IO & NIO 네트워크 프로그래밍 - 표 5-14.png]]
+
+## 1. Char 배열 형태로 만든 후 이 내용을 화면에 출력하기
+
+```java
+import java.io.BufferedReader;  
+import java.io.BufferedWriter;  
+import java.io.CharArrayReader;  
+import java.io.CharArrayWriter;  
+import java.io.FileReader;  
+import java.io.OutputStreamWriter;  
+import java.io.PrintWriter;  
+  
+public class CharArrayInputOutputTest {  
+    public static void main(String[] args) {  
+        char[] fileArray = new char[512];  
+  
+        try (BufferedReader br = new BufferedReader(new FileReader("/Users/kangbada/test"));  
+             CharArrayWriter caw = new CharArrayWriter()) {  
+  
+            char[] buffer = new char[512];  
+            int readcount = 0;  
+            while ((readcount = br.read(buffer)) != -1) {  
+                caw.write(buffer, 0, readcount);  
+            }  
+            fileArray = caw.toCharArray();  
+  
+        } catch (Exception e) {}  
+  
+        System.out.println("파일의 내용을 모두 읽어들여 Char[] 로 만들었다.");  
+        System.out.println("읽어들인 Char 의 수 : " + fileArray.length);  
+  
+        try (CharArrayReader car = new CharArrayReader(fileArray);  
+             PrintWriter pw = new PrintWriter(new BufferedWriter(new OutputStreamWriter(System.out)), true)) {  
+  
+            int readcount = 0;  
+            char[] buffer = new char[512];  
+            while ((readcount = car.read(buffer)) != -1) {  
+                pw.write(buffer, 0, readcount);  
+            }  
+  
+        } catch (Exception e) {}  
+    }  
+}
+```
+
+- BufferedWriter의 경우 `write()` 메소드를 이용해서 출력한 후, `flush()` 메소드나 `close()` 메소드를 호출해야만 버퍼 안에 저장된 내용이 완전하게 출력된다.
+- 그래서 while 문을 돌 때마다 `flush()` 를 수행해야 한다.
+
+# 08. StringReader 와 StringWriter
+
+- StringReader와 StringWriter 클래스는 각각 CharArrayReader, CharArrayWriter 와 비슷하다.
+- StringReader는 문자열로부터 읽어 들이기 위한 클래스
+- StringWriter는 자신의 내부 저장 공간에 출력된 내용을 문자열로 반환할 수 있는 기능을 가진 클래스
+
+## 생성자 및 메소드
+
+![[자바 IO & NIO 네트워크 프로그래밍 - 표 5-15.png]]
+
+![[자바 IO & NIO 네트워크 프로그래밍 - 표 5-16.png]]
+
+![[자바 IO & NIO 네트워크 프로그래밍 - 표 5-17.png]]
 
