update: 05장. 문자 스트림 - 문자 단위 IO 클래스

--- a/002. Development/자바 IO & NIO 네트워크 프로그래밍/06장. 객체 스트림.md
+++ b/002. Development/자바 IO & NIO 네트워크 프로그래밍/06장. 객체 스트림.md
@@ -6,4 +6,162 @@ tags:
   - Network
   - 책_자바_IO_NIO_네트워크_프로그래밍
 ---
+# 01. 객체 스트림
 
+# 02. 첫번째 예제: 생각해볼 문제와 간단한 예제
+
+- 객체의 형태가 복잡할수록 이를 저장하거나 읽어들인 후 원래 객체의 형태로 되돌리는 일은 쉽지 않은 작업이 된다.
+- 아래 예제에서는 위 문제를 객체 스트림을 이용해서 해결하였다.
+
+## ObjectOutputStream 예제
+
+```java
+import java.io.FileOutputStream;  
+import java.io.ObjectOutputStream;  
+import java.util.Vector;  
+  
+public class ObjectStreamTest1 {  
+    public static void main(String[] args) {  
+        Vector v = new Vector();  
+        Vector v1 = new Vector();  
+        Vector v2 = new Vector();  
+        Vector v3 = new Vector();  
+        v1.add("data 1");  
+        v1.add("data 2");  
+        v1.add("data 3");  
+        v2.add("data 4");  
+        v3.add(v2);  
+        v.add(v1);  
+        v.add(v3);  
+  
+        try (ObjectOutputStream oos = new ObjectOutputStream(new FileOutputStream("/Users/kangbada/object.dat"))) {  
+            oos.writeObject(v);  
+            oos.reset();  
+            System.out.println("저장되었습니다.");  
+        } catch (Exception e) {}  
+  
+    }  
+}
+```
+
+![[자바 IO & NIO 네트워크 프로그래밍 - 그림 6-2.png|500]]
+
+- `writeObject` 메소드는 Object 객체를 인자로 받아들이는데, 인자로 받아들인 객체를 생성자로 지정된 Stream 으로 출력한다.
+- 즉, 인자로 들어온 Vector 객체를 FileOutputStream 을 통해서 출력하게 된다.
+
+- Vector 를 출력하면, 해당 Vector 에 지정된 내용들이 모두 출력된다.
+- 즉, `writeObject()` 메소드를 한 번만 사용함으로써 메모리 내의 모든 내용들이 object.dat 파일에 저장된다.
+
+- `writeObject()` 메소드를 이용해서 출력한 후에는 반드시 `reset()` 메소드를 호출해야 한다.
+- 그렇지 않을 경우 메모리 릭(Leak)이 발생할 수 있다.
+
+## ObjectInputStream 예제
+
+```java
+import java.io.FileInputStream;  
+import java.io.ObjectInputStream;  
+import java.util.Vector;  
+  
+public class ObjectStreamTest2 {  
+    public static void main(String[] args) {  
+        try (ObjectInputStream ois = new ObjectInputStream(new FileInputStream("/Users/kangbada/object.dat"))) {  
+  
+            Vector v = (Vector) ois.readObject();  
+            Vector v1 = (Vector) v.get(0);  
+            String d1 = (String) v1.get(0);  
+            String d2 = (String) v1.get(1);  
+            String d3 = (String) v1.get(2);  
+            Vector v3 = (Vector) v.get(1);  
+            Vector v2 = (Vector) v3.get(0);  
+            String d4 = (String) v2.get(0);  
+  
+            System.out.println(d1);  
+            System.out.println(d2);  
+            System.out.println(d3);  
+            System.out.println(d4);  
+  
+        } catch (Exception e) {}  
+    }  
+}
+```
+
+- `readObject()` 메소드는 ObjectInputStream 에 지정한 InputStream 으로부터 객체를 읽어 들여 반환한다.
+
+# 03. 객체 스트림 소개
+
+>[!note]
+>객체 스트림을 이용하면 객체를 아주 쉽게 전송하거나 쓸 수 있다.
+	객체가 전송되거나 쓴다고 하면, 보통 데이터만 해당된다고 생각할 수 있다.
+	객체가 전송된다는 것은 애플릿, 윈도우 등도 전송될 수 있다는 것을 의미한다.
+
+>[!important] 객체를 전송하려면 다음 순서를 거쳐야 한다.
+> 1. 데이터를 특정 통신 채널로 보낼 수 있는 형태로 바꾼다. (마샬링 - marshaling)
+> 2. 변환된 데이터를 전송하거나 쓴다.
+> 3. 변환된 데이터를 읽어 들여 원래의 형태로 변환한다. (언마샬링 - unmarshaling)
+
+## 마샬링 - marshaling
+
+> [!Info] 마샬링이란?
+> 데이터를 바이트의 흐름으로 만들어 TCP 와 같은 통신 채널을 통해서 전송하거나 스트림으로 써줄 수 있는 형태로 바꾸는 과정
+
+>[!important] 마샬링이 될 수 있는 데이터의 조건
+> - 기본 자료형 (boolean, byte, char, short, int, long, float, double)
+> - java.io.Serializable 인터페이스를 구현하고 있는 객체
+
+- 기본 자료형이 정수일 경우에는 4바이트로 쪼개져서 전송된다.
+- 객체 스트림은 객체의 내부적인 참조까지 유지하기 위한 방법을 제공해 준다.
+
+- 마샬링은 객체 스트림인 ObjectOutputStream 에 의해 제공된다.
+- ObjectOutputStream 에 의해 객체는 직렬화되어 전달된다.
+
+> [!tip]- java.io.Serializable 인터페이스는 마크 인터페이스 이다.
+> java.io.Serializable 인터페이스는 구현해야할 메소드가 하나도 없다.
+> 이런 인터페이스를 마크 인터페이스라고 하는데, 마크 인터페이스는 메소드를 구현하는 것이 목적이 아니라 표시만 해두는 기능을 한다.
+
+## 전송
+
+- 데이터를 발신지에서 목적지로 전달하는 과정을 말한다.
+- 전송을 위해서 객체 스트림은 바이트 기반의 표준 스트림을 이용하게 된다.
+
+## 언마샬링 - unmarshaling
+
+> [!info] 언마샬링이란?
+> 전송받은 데이터를 원래의 형태로 변환하는 과정
+
+- 언마샬링은 객체 스트림인 ObjectInputStream 에 의해 제공된다.
+- ObjectInputStream 에 의해 객체는 역직렬화되어 전달된다.
+
+
+# 04. 두 번째 예제: 나의 책 목록
+
+# 05. 마샬링하고 싶지 않은 필드에 대한 처리
+
+- 보안상 중요한 필드는 마샬링에서 제외하고 싶을 수 있다.
+- 이럴 때는 자바 키워드인 `transient` 를 사용하자.
+
+- 기존 코드 : `private String author;`
+- 변경 코드 : `transient private String author;`
+
+- 만약 이렇게하고 저장한 다음, 다시 읽어들이면 해당 필드는 null 로 저장된다.
+
+
+# 06. 세 번째 예제 : 윈도우 저장과 읽기
+
+- 객체 안에 Serializable 을 구현하지 않은 객체가 있다면, 그 객체는 마샬링에서 제외된다.
+
+# 07. ObjectOutputStream 클래스의 생성자와 메소드
+
+![[자바 IO & NIO 네트워크 프로그래밍 - 표 6-1.png]]
+
+# 08. ObjectInputStream 클래스의 생성자와 메소드
+
+![[자바 IO & NIO 네트워크 프로그래밍 - 표 6-2.png]]
+
+# 09. 객체 스트림의 예외
+
+![[자바 IO & NIO 네트워크 프로그래밍 - 표 6-3.png]]
+
+>[!warning]
+>객체 스트림에서 주의해야 할 점이 있다면, 파일에 객체 기반 스트림으로 저장할 때 객체 여러 개를 이어서 저장할 수 없다는 것이다. 
+>객체 스트림을 이용해서 객체를 파일에 저장할 때는 한 파일에 객체 하나만 저장할수 있다. 
+>물론, 저장되는 객체 안에 포함된 필드가 여러 개 일 경우, 필드의 내용도 한꺼번에 직렬화되어 저장된다.
